Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/BadTwrSyntax.out
BadTwrSyntax.java:13:43: compiler.err.illegal.start.of.expr
1 error
